Updated net speed

--- a/usr_extensions/netspeed@hedayaty.gmail.com/CHANGELOG
+++ b/usr_extensions/netspeed@hedayaty.gmail.com/CHANGELOG
@@ -1,5 +1,15 @@
+* Sun Nov 11 2012 Amir Hedayaty <hedayaty AT gmail DOT com>- 3.6.13
+- add gnome 3.6 compatibility (hopefully does not break gnome <= 3.4)
+- (Major) added preferences
+- works great with gnome-shell-extension-prefs
+- changes icon by device type
+- settings are stored
+- added preferences Icon
+
+
 * Wed May 16 2012 Amir Hedayaty <hedayaty AT gmail DOT com>- 3.2.12
 - Remove the log message used for debug
+- Set default not to show the icon
 
 * Tue May 1 2012 Amir Hedayaty <hedayaty AT gmail DOT com>- 3.2.11
 - Defaulted to show up/down seperately
